--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -104,6 +104,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -279,7 +280,6 @@ allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
-allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -780,6 +780,7 @@ allow 2001:910:1400:107::2;
 allow 2001:9b0:258:c600::1000;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:9e54::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -869,6 +870,7 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
+allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
@@ -1028,7 +1030,6 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
-allow 2a01:4f9:c012:ee09::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1454,7 +1455,6 @@ allow 37.187.74.97;
 allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
-allow 37.27.218.26;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 3.76.125.118;
@@ -1520,6 +1520,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1611,7 +1612,6 @@ allow 71.19.144.128;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
-allow 74.226.169.204;
 allow 74.82.47.194;
 allow 77.237.235.148;
 allow 77.48.28.239;
@@ -1709,7 +1709,6 @@ allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.211.174.137;
 allow 95.211.244.28;
 allow 96.126.98.146;
 allow 96.66.15.152;
