--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -104,6 +104,7 @@ deny 2001:910:1400:107::2;
 deny 2001:9b0:258:c600::1000;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:9e54::b;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -254,7 +255,6 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
-deny 2a01:4f9:c012:ee09::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
