--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -142,6 +142,11 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 154.9.226.237;
+allow 156.229.232.104;
+allow 156.229.232.108;
+allow 156.229.232.115;
+allow 156.229.232.98;
 allow 158.220.123.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
@@ -1026,6 +1031,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1033,6 +1039,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1110,6 +1117,10 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1509,7 +1520,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1532,6 +1542,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 5.104.86.6;
@@ -1700,6 +1711,7 @@ allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.211.244.28;
+allow 95.216.107.148;
 allow 96.126.98.146;
 allow 96.66.15.152;
 allow 98.128.173.33;
