--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -255,6 +255,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -262,6 +263,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -339,6 +341,10 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
