--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -129,7 +129,6 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
-deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -255,7 +254,6 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:c70:1:185:246:84:179:1;
-deny 2a01:4f9:2b:75d::124:148;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -306,6 +304,7 @@ deny 2a03:4000:6:614:d803:40ff:fec3:832a;
 deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+deny 2a03:6f02::5366;
 deny 2a03:6f20:531::254;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
