--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -628,7 +628,6 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.130.99;
 allow 194.163.157.49;
-allow 194.233.174.56;
 allow 194.26.192.142;
 allow 194.26.192.161;
 allow 194.26.192.72;
@@ -809,6 +808,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 209.135.168.90;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -906,6 +906,7 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
+allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -1039,7 +1040,6 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1351,7 +1351,6 @@ allow 2a0d:bbc7:0:1::394;
 allow 2a0d:bbc7:0:1::3bd;
 allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
-allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1458,7 +1457,6 @@ allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
-allow 37.48.70.156;
 allow 38.97.116.244;
 allow 4.189.65.75;
 allow 45.11.229.132;
@@ -1544,7 +1542,6 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 5.104.86.6;
@@ -1613,7 +1610,6 @@ allow 71.19.144.128;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
-allow 74.226.169.204;
 allow 74.82.47.194;
 allow 77.237.235.148;
 allow 77.48.28.239;
@@ -1683,7 +1679,6 @@ allow 91.92.109.43;
 allow 92.223.2.52;
 allow 92.243.24.163;
 allow 92.246.138.145;
-allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.228.125;
