--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -628,7 +628,6 @@ deny 194.15.113.118;
 deny 194.15.115.212;
 deny 194.163.130.99;
 deny 194.163.157.49;
-deny 194.233.174.56;
 deny 194.26.192.142;
 deny 194.26.192.161;
 deny 194.26.192.72;
@@ -809,6 +808,7 @@ deny 205.185.123.93;
 deny 205.185.124.176;
 deny 205.185.124.193;
 deny 205.185.127.231;
+deny 209.135.168.90;
 deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.37.94;
@@ -906,6 +906,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
+deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -1039,7 +1040,6 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -1351,7 +1351,6 @@ deny 2a0d:bbc7:0:1::394;
 deny 2a0d:bbc7:0:1::3bd;
 deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
-deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1458,7 +1457,6 @@ deny 37.228.129.128;
 deny 37.228.129.5;
 deny 37.228.129.63;
 deny 37.48.120.196;
-deny 37.48.70.156;
 deny 38.97.116.244;
 deny 4.189.65.75;
 deny 45.11.229.132;
@@ -1544,7 +1542,6 @@ deny 45.95.169.228;
 deny 45.95.169.229;
 deny 45.95.169.255;
 deny 46.165.243.36;
-deny 46.182.21.248;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 5.104.86.6;
@@ -1613,7 +1610,6 @@ deny 71.19.144.128;
 deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
-deny 74.226.169.204;
 deny 74.82.47.194;
 deny 77.237.235.148;
 deny 77.48.28.239;
@@ -1683,7 +1679,6 @@ deny 91.92.109.43;
 deny 92.223.2.52;
 deny 92.243.24.163;
 deny 92.246.138.145;
-deny 92.246.84.133;
 deny 93.123.12.112;
 deny 93.185.165.211;
 deny 93.95.228.125;
