--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -189,7 +189,6 @@ allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
-allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -217,14 +216,6 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.43.128.16;
-allow 179.43.159.194;
-allow 179.43.159.195;
-allow 179.43.159.196;
-allow 179.43.159.197;
-allow 179.43.159.198;
-allow 179.43.159.199;
-allow 179.43.159.200;
-allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
@@ -878,7 +869,6 @@ allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
-allow 23.236.122.193;
 allow 23.94.211.25;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
@@ -1040,6 +1030,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1501,7 +1492,6 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.148.10.111;
 allow 45.148.10.169;
-allow 45.154.98.26;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1519,7 +1509,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1542,6 +1531,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 5.104.86.6;
@@ -1610,6 +1600,7 @@ allow 71.19.144.128;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
+allow 74.226.169.204;
 allow 74.82.47.194;
 allow 77.237.235.148;
 allow 77.48.28.239;
@@ -1647,7 +1638,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.117.109.76;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
